Hide browser URL overflow in both directions to prevent scroll

--- a/app/_assets/css/components/_browser.scss
+++ b/app/_assets/css/components/_browser.scss
@@ -63,7 +63,7 @@
   display: inline-block;
   font-size: 1rem;
   left: 44px;
-  overflow-y: hidden;
+  overflow: hidden;
   padding-left: 8px;
   position: absolute;
   right: 4px;
